--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
             <img src="https://dx35vtwkllhj9.cloudfront.net/united-artists-releasing/creed-iii/images/regions/us/onesheet.jpg" alt="Banner do Filme">
         </div>
         <div class="atores">
-            <div class="ator">
-
                 <img src="https://br.web.img2.acsta.net/pictures/18/08/08/18/23/1187644.jpg" alt="Ator 1">
-                <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcT6Z5Kv5D15U7C8rjfSAQllia-fIvWmVBlPQYyRYW_WCi0-2rIo" alt="Ator 2">
+                <img src="https://pyxis.nymag.com/v1/imgs/8f6/36a/407e4eaa8fdf28a26a71c6c52c088eaef4-jonathan-majors.1x.rsquare.w1400.jpg" alt="Ator 2">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Tessa_Thompson_by_Gage_Skidmore_3.jpg" alt="Ator 3">
-            </div>
             </div>
 </body>
 </html>
